--- a/peermountain_sdk/src/main/res/layout/pm_fragment_security_tutorial.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_security_tutorial.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     android:id="@+id/layout_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,55 +9,20 @@
     tools:background="@drawable/pm_bkg"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <ViewFlipper
-            android:id="@+id/details"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/pm_security_tutorial_1"/>
-
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/pm_security_tutorial_2"/>
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/pm_security_tutorial_3"/>
-
-
-        </ViewFlipper>
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:gravity="center_horizontal|bottom"
             android:orientation="vertical"
-            android:padding="30dp">
+            android:layout_marginBottom="@dimen/pm_confirm_btn_size"
+            android:padding="@dimen/pm_margin_normal">
 
             <com.peermountain.sdk.views.PeerMountainTextView
                 android:id="@+id/tvCurrentPageTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="@dimen/pm_margin_normal"
                 android:gravity="center"
                 android:text="text"
                 android:textColor="@color/pm_text_color"
@@ -76,10 +41,39 @@
                 android:textSize="@dimen/pm_regular_text"
                 android:lineSpacingExtra="10dp"/>
 
-            <View
+            <ViewFlipper
+                android:id="@+id/details"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/pm_intro_security_icon_size"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/pm_security_tutorial_1"/>
+
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/pm_intro_security_icon_size"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/pm_security_tutorial_2"/>
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/pm_intro_security_icon_size"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/pm_security_tutorial_3"/>
+
+
+            </ViewFlipper>
+          <!--  <View
                 android:layout_width="1dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"/>-->
 
             <com.peermountain.sdk.views.PeerMountainTextView
                 android:id="@+id/tvCurrentPageMessage2"
@@ -102,13 +96,12 @@
                 android:textSize="@dimen/pm_big_text"/>
 
         </LinearLayout>
-    </FrameLayout>
     <ImageView
         android:id="@+id/pmIvNext"
         style="@style/pm_square_btn"
         android:layout_gravity="bottom"
         android:rotation="180"
         app:srcCompat="@drawable/pm_ic_arrow_back_24dp"/>
-</LinearLayout>
+</FrameLayout>
 
 
