--- a/peermountain_sdk/src/main/res/values-xhdpi/dimens.xml
+++ b/peermountain_sdk/src/main/res/values-xhdpi/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="pm_margin_small">8dp</dimen>
     <dimen name="pm_margin_big">24dp</dimen>
     <dimen name="margin_first_card">48dp</dimen>
+    <dimen name="pm_intro_security_icon_size">150dp</dimen>
 </resources>
