--- a/peermountain_sdk/src/main/res/values/dimens.xml
+++ b/peermountain_sdk/src/main/res/values/dimens.xml
@@ -37,6 +37,7 @@
 
     <dimen name="pm_avatar_size">70dp</dimen>
     <dimen name="pm_avatar_border_size">2dp</dimen>
+    <dimen name="pm_id_size">200dp</dimen>
 
     <dimen name="pm_reg_profile_text_size">16sp</dimen>
     <dimen name="pm_reg_profile_text_hint_size">12sp</dimen>
