--- a/peermountain_sdk/src/main/res/layout/pm_activity_register.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_activity_register.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/pm_bkg"
     android:orientation="vertical"
     android:paddingTop="@dimen/pm_margin_big"
-    tools:context="com.peermountain.sdk.ui.register.RegisterActivity">
+    tools:activity="com.peermountain.sdk.ui.register.RegisterActivity">
 
     <include layout="@layout/pm_toolbar"/>
 
