--- a/peermountain_sdk/src/main/res/layout/pm_content_home.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_content_home.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pm_bkg"
     android:orientation="vertical"
-    tools:context="com.peermountain.sdk.ui.authorized.HomeActivity">
+    tools:activity="com.peermountain.sdk.ui.authorized.HomeActivity">
 
     <View android:id="@+id/shadowView"
         android:layout_width="match_parent"
