--- a/peermountain_sdk/src/main/res/layout/pm_fragment_home.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_home.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               tools:background="@drawable/pm_bkg"
-              tools:context="com.peermountain.sdk.ui.authorized.home.HomeFragment">
+              tools:activity="com.peermountain.sdk.ui.authorized.home.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
