--- a/peermountain_sdk/src/main/res/layout/pm_fragment_register_keywords.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_register_keywords.xml
@@ -5,7 +5,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               tools:background="@drawable/pm_bkg"
               android:orientation="vertical"
-              tools:context="com.peermountain.sdk.ui.register.RegisterKeywordsFragment">
+              tools:activity="com.peermountain.sdk.ui.register.RegisterKeywordsFragment">
 
     <com.peermountain.sdk.views.PeerMountainTextView
         android:id="@+id/pmTvMessageKeywords"
