--- a/peermountain_sdk/src/main/res/layout/pm_fragment_scan_qr.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_scan_qr.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.peermountain.sdk.ui.authorized.contacts.ScanQRFragment">
+             tools:activity="com.peermountain.sdk.ui.authorized.contacts.ScanQRFragment">
 
 
 </FrameLayout>
