--- a/peermountain_core/src/main/res/values/dimens.xml
+++ b/peermountain_core/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
 
     <dimen name="pm_corners">6dp</dimen>
     <dimen name="pm_avatar_size">70dp</dimen>
+    <dimen name="pm_id_size">200dp</dimen>
 </resources>
