--- a/peermountain_core/src/main/res/layout/pm_set_file_title_dialog.xml
+++ b/peermountain_core/src/main/res/layout/pm_set_file_title_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@drawable/pm_keyword_bkg"
+              android:background="@color/pm_share_card_bkg"
               android:orientation="vertical">
 
     <com.peermountain.sdk.views.PeerMountainTextView
