--- a/peermountain_sdk/src/main/res/layout/pm_fragment_profile_settings.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_profile_settings.xml
@@ -158,7 +158,7 @@
                 android:orientation="vertical"
                 android:padding="@dimen/pm_margin_normal">
 
-                <LinearLayout
+           <!--     <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/pm_profile_row_height"
                     android:orientation="horizontal">
@@ -188,7 +188,65 @@
                         style="@style/pm_settings_profile_et"
                         tools:text="@string/pm_profile_settings_lbl_ln"/>
                 </LinearLayout>
+                -->
+                <com.peermountain.sdk.views.PeerMountainTextView
+                    style="@style/pm_settings_profile_lbl_public"
+                    android:text="@string/pm_profile_settings_lbl_fb"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/pm_margin_normal"
+                    android:orientation="horizontal">
+
+                    <com.peermountain.sdk.views.PeerMountainTextView
+                        android:id="@+id/pmTvFB"
+                        style="@style/pm_reg_profile_et"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <com.peermountain.sdk.views.PeerMountainTextView
+                        android:id="@+id/pmTvFBConnect"
+                        style="@style/pm_reg_profile_et"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:visibility="gone"
+                        android:text="@string/pm_register_btn_connect"/>
+
+
+                </LinearLayout>
+
+
+                <com.peermountain.sdk.views.PeerMountainTextView
+                    style="@style/pm_settings_profile_lbl_public"
+                    android:text="@string/pm_profile_settings_lbl_ln"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/pm_margin_normal"
+                    android:layout_marginRight="@dimen/pm_margin_normal"
+                    android:orientation="horizontal">
+
+                    <com.peermountain.sdk.views.PeerMountainTextView
+                        android:id="@+id/pmTvLN"
+                        style="@style/pm_reg_profile_et"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <com.peermountain.sdk.views.PeerMountainTextView
+                        android:id="@+id/pmTvLNConnect"
+                        style="@style/pm_reg_profile_et"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:visibility="gone"
+                        android:text="@string/pm_register_btn_connect"/>
+
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
