--- a/peermountain_sdk/src/main/res/layout/pm_fragment_profile_settings.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_profile_settings.xml
@@ -65,7 +65,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="@dimen/pm_margin_normal"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -226,7 +226,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/pm_margin_normal"
                     android:layout_marginRight="@dimen/pm_margin_normal"
                     android:orientation="horizontal">
 
@@ -239,6 +238,36 @@
 
                     <com.peermountain.sdk.views.PeerMountainTextView
                         android:id="@+id/pmTvLNConnect"
+                        style="@style/pm_reg_profile_et"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:visibility="gone"
+                        android:text="@string/pm_register_btn_connect"/>
+
+                </LinearLayout>
+
+
+                <com.peermountain.sdk.views.PeerMountainTextView
+                    style="@style/pm_settings_profile_lbl_public"
+                    android:text="@string/pm_profile_settings_lbl_g"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/pm_margin_normal"
+                    android:layout_marginRight="@dimen/pm_margin_normal"
+                    android:orientation="horizontal">
+
+                    <com.peermountain.sdk.views.PeerMountainTextView
+                        android:id="@+id/pmTvG"
+                        style="@style/pm_reg_profile_et"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <com.peermountain.sdk.views.PeerMountainTextView
+                        android:id="@+id/pmTvGConnect"
                         style="@style/pm_reg_profile_et"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
