--- a/peermountain_core/src/main/res/values/dimens.xml
+++ b/peermountain_core/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="pm_corners">6dp</dimen>
     <dimen name="pm_avatar_size">70dp</dimen>
     <dimen name="pm_id_size">200dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="camera_size">300dp</dimen>
 </resources>
