--- a/peermountain_core/src/main/res/values/styles.xml
+++ b/peermountain_core/src/main/res/values/styles.xml
@@ -17,4 +17,15 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="camera_button">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_gravity">bottom|center_horizontal</item>
+        <item name="android:layout_marginBottom">@dimen/pm_margin_normal</item>
+    </style>
+
+    <style name="PmCoreTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <style name="PmCoreTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
 </resources>
